trying to fix background on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,8 @@
 @media screen and (max-width: 600px) {
   .background {
     background-image: url(/images/mobileBackground.jpg);
+    background-repeat: repeat;
+
 
   }
 }
